[package]
name = "murmur-api"
version = "0.1.0"
edition = "2021"
authors = ["Ideal Labs <hello@idealabs.network>"]
repository = "https://github.com/ideal-lab5/murmur-api"
homepage = "https://idealabs.network"
license = "MIT-0"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.10.1"
mongodb = "3.1.0"
tokio= "1.40.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["mongodb"]