[package]
name = "murmur-api"
version = "0.1.0"
edition = "2021"
authors = ["Ideal Labs <hello@idealabs.network>"]
repository = "https://github.com/ideal-lab5/murmur-api"
homepage = "https://idealabs.network"
license = "MIT-0"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10.1"
murmur = { package = "murmur-lib", git = "https://github.com/ideal-lab5/murmur.git" }
serde_cbor = "0.11.2"
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", features = ["bls-experimental"] }
subxt-signer = "0.35.2"
subxt = "0.35.2"
hex = "0.4.3"
parity-scale-codec = "3.6.12"
dotenv = "0.15.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["mongodb"]
